# depdok

./: .env.example  .gitignore  .mcp.json  .version-lock  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  example.todo  install.ps1  opencode.jsonc  package.json  pnpm-lock.yaml  test-week-view.todo  vite.config.ts
.agent/rules/: global.md  windows-path-safety.md
.agent/workflows/: create-open-with-macos.md
.github/workflows/: build.yml  on-release.yml  publish-public.yml  trigger-download-release.yml
Casks/: depdok.rb
docs/: file-folder-manipulation.md  file-search-with-ripgrep.md  knowledge-base-summary.md  knowledge-base.md  license-guard.md  llm-integration.md  markdown-comments.md  markdown-pagination.md  multiple-windows-architecture.md  right-click-icon-and-cross-platform-cli-plan.md  sample.md  sample.mmd  tauri-file-explorer-tutorial.md  watch-file-folder-plan.md  workflow-macos-window.md
docs/knowledge-base/: knowledge-base-comparison.md  knowledge-base-mcp-architecture.md  knowledge-base-plan-from-claude.md  knowledge-base.md  mcp-agent-guide.md  mcp-connectivity-plan.md
docs/marketing/: 1-marketing_and_product_strategy.md  2-feature_roast.md  3-product_improvements.md
docs/marketing/plan/: 1-llm-onboarding.md  2-markdown-editor-hybrid.md  3-diagram-offline-upgrade.md  3-offline-collaboration.md  4-excalidraw-git-integration.md  4-excalidraw-svg-save.md  5-native-plantuml-preview.md  5-offline-collaboration.md  6-remove-redundant-features.md
docs/plan/: ai-chat-integration.md  custom-ai-model-directory-windows.md  markdown-comment-extension.md  md-to-pdf.md  rmcp-depdok-server-refactor-plan.md  shared-file-content-sync.md  split-editor-issue.md  split-editor-v2.md  split-editor.md  tab-switch-perforrmance.md  terminal-intergration.md
scripts/: version-upgrade.js
src/: App.css  App.tsx
src-tauri/: .gitignore  Cargo.toml  build.rs  hooks.nsh  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: dock.rs  keychain.rs  lib.rs  license_manager.rs
src-tauri/src/commands/: content_search.rs  export.rs  file_explorer.rs  file_search.rs  file_watcher.rs  files.rs  git.rs  logger.rs  mod.rs  terminal.rs
src-tauri/src/knowledge_base/: commands.rs  db.rs  manager.rs  mod.rs  parser.rs
src-tauri/src/knowledge_base/embedding/: chunker.rs  fastembed.rs  mod.rs  openai.rs
src-tauri/src/knowledge_base/markdown_chunking/: mod.rs
src-tauri/src/knowledge_base/tests/: internal_commands.rs  mod.rs
src-tauri/src/llm/: commands.rs  engine.rs  mod.rs  models.rs  provider.rs  remote.rs  session.rs  tools.rs
src-tauri/src/llm/chat/: chat.rs  mod.rs  session.rs
src-tauri/src/llm/commands/: grammar.rs
src-tauri/src/llm/providers/: claude.rs  lm_studio.rs  local.rs  mod.rs  ollama.rs  openai.rs
src-tauri/src/llm/settings/: config.rs  mod.rs  models.rs  provider.rs
src-tauri/src/llm/tools/: fs.rs  mod.rs  shell.rs  yahoo.rs
src-tauri/src/mcp_server/: config.rs  mod.rs  service.rs
src-tauri/src/mcp_server/tools/: knowledge_base.rs
src-tauri/src/menu/: mod.rs
src/api-client/: cli.ts  contextMenu.ts  knowledge-base.ts  license.ts  logger.ts  mcp.ts  terminal.ts  window.ts
src/components/: AppMenuListener.tsx  CLIListener.tsx  FileIcon.tsx  Footer.tsx  FooterGitSection.tsx  Layout.tsx  LicenseGuard.tsx  LicenseStatusBadge.tsx  RecoveryDialog.tsx  SettingsDialog.tsx
src/components/CustomScroller/: index.tsx
src/hooks/: useActiveHeading.ts  useFileWatcher.ts  useGlobalShortcuts.ts  useLocalStorage.ts  useMarkdownExport.tsx  useProjectStateSync.ts  useSyncRecentFoldersToDock.ts  useWindowDrag.ts  useWorkspaceWatcher.ts
src/lib/: commentParser.ts  fileOperations.ts  fileSupport.ts  fileWatcher.ts  gitUtils.ts  indexeddb.ts  knowledgeGraph.ts  license-cache.ts  settings.ts  storage.ts  tokenUtils.ts
src/pages/: Checking.tsx  Editor.tsx  Home.tsx
src/stores/: DirtyStore.ts  EditorStore.ts  FileWatchStore.ts  GitStore.ts  PaneStore.ts  SettingsStore.ts  TabPreviewStore.ts  TabStore.ts  TerminalStore.ts  license-popover.ts  license.ts
(+266 files in other folders)
