[package]
name = "Depdok"
version = "0.0.1"
description = "Depdok"
authors = ["hudy9x"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "odoflow_agent_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [ "protocol-asset", "macos-private-api", "devtools", "image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-shell = "2"
tauri-plugin-os = "2"
tauri-plugin-store = "2"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
notify-debouncer-full = "0.7.0"
fs_extra = "1.3.0"
nucleo-matcher = "0.3"
ignore = "0.4"
grep-searcher = "0.1"
grep-regex = "0.1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
keyring = "2.3"
machine-uid = "0.5"
uuid = { version = "1.0", features = ["v4"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

[target."cfg(target_os = \"macos\")".dependencies]
window-vibrancy = "0.7.1"
