[package]
name = "Depdok"
version = "0.0.1"
description = "Depdok"
authors = ["hudy9x"]
edition = "2021"
default-run = "Depdok"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "odoflow_agent_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [ "protocol-asset", "macos-private-api", "devtools", "image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-shell = "2"
tauri-plugin-os = "2"
tauri-plugin-store = "2"
tauri-plugin-single-instance = "2"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
notify-debouncer-full = "0.7.0"
fs_extra = "1.3.0"
nucleo-matcher = "0.3"
ignore = "0.4"
grep-searcher = "0.1"
grep-regex = "0.1"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }
futures-util = "0.3"
keyring = "2.3"
machine-uid = "0.5"
uuid = { version = "1.0", features = ["v4"] }
rusqlite = { version = "0.31", features = ["bundled"] }
sqlite-vec = "0.1"
fastembed = "4"
axum = "0.8.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors"] }
pulldown-cmark = { version = "0.12", default-features = false }
async-trait = "0.1"
portable-pty = "0.8"
rmcp = { version = "=0.8.0", features = ["server", "transport-io", "schemars"] }
schemars = "1.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

[target."cfg(target_os = \"macos\")".dependencies]
window-vibrancy = "0.7.1"
objc2 = "0.6"

[features]
default = []
# Enable the OpenAI embedding provider (adds network calls; requires an API key at runtime)
openai-embeddings = []

[profile.release]
opt-level = "z"      # Optimize for size
lto = true           # Enable Link-Time Optimization (LTO)
codegen-units = 1    # Maximize LTO optimization
panic = "abort"      # Remove panic unwinding to reduce binary size
strip = true         # Strip symbols and debuginfo automatically

